fixed location gap; fixed import error

--- a/src/components/Header/location/location.module.css
+++ b/src/components/Header/location/location.module.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 10px;
+  gap: 5px;
   flex-direction: row;
   margin-left: 30px;
   padding: 8px 0 8px 0;
